--- a/app/src/main/res/layout/activity_mis_avisos.xml
+++ b/app/src/main/res/layout/activity_mis_avisos.xml
@@ -22,6 +22,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            android:textColor="?android:attr/textColorPrimary" />
+            android:textColor="?android:attr/textColorPrimary"
+            android:layout_marginBottom="15dp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/rv_mis_avisos" />
     </LinearLayout>
 </RelativeLayout>
