--- a/app/src/main/res/layout/activity_realizar_solicitud.xml
+++ b/app/src/main/res/layout/activity_realizar_solicitud.xml
@@ -63,7 +63,7 @@
         </LinearLayout>
 
         <TextView
-            android:text="@string/descripcion"
+            android:text="@string/descripcion_de_la_solicitud"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
