--- a/app/src/main/res/layout/activity_listar_menus.xml
+++ b/app/src/main/res/layout/activity_listar_menus.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_listar_solicitudes"
+    android:id="@+id/activity_listar_menus"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.personal.ListarSolicitudesActivity">
+    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.personal.ListarMenusActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,7 +27,7 @@
             android:layout_marginBottom="15dp">
 
             <TextView
-                android:text="@string/filtrar_por_estado"
+                android:text="@string/filtrar_por_planta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -38,18 +38,15 @@
             <Spinner
                 android:layout_width="159dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/cb_filtro_listar_solicitudes"
+                android:id="@+id/cb_filtro_plantas_menu"
                 android:layout_weight="0.19" />
 
         </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
+        <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:id="@+id/rv_listar_solicitudes">
-
-        </android.support.v7.widget.RecyclerView>
+            android:id="@+id/lv_menus_plantas" />
 
     </LinearLayout>
 </RelativeLayout>
