--- a/app/src/main/res/layout/activity_menu_personal.xml
+++ b/app/src/main/res/layout/activity_menu_personal.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.personal.MenuPersonal"
+    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.personal.MenuPersonalActivity"
     android:background="@color/colorBackground">
 
     <LinearLayout
