--- a/app/src/main/res/layout/cardview_mis_avisos.xml
+++ b/app/src/main/res/layout/cardview_mis_avisos.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:text="@string/fecha_inicio"
+                    android:text="@string/fecha_inicio_"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="?android:attr/textColorPrimary"
