--- a/app/src/main/res/layout/activity_mis_avisos.xml
+++ b/app/src/main/res/layout/activity_mis_avisos.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.pacientes.MisAvisosActivity">
+    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.GUI.pacientes.MisAvisosActivity">
 
     <LinearLayout
         android:orientation="vertical"
