--- a/app/src/main/res/layout/activity_realizar_solicitud.xml
+++ b/app/src/main/res/layout/activity_realizar_solicitud.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.pacientes.RealizarSolicitudActivity"
+    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.GUI.pacientes.RealizarSolicitudActivity"
     android:background="@color/colorBackground">
 
     <LinearLayout
@@ -23,7 +23,7 @@
         android:layout_marginTop="10dp">
 
         <TextView
-            android:text="@string/desea_solicitar"
+            android:text="@string/motivo_solicitud"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
