--- a/app/src/main/res/layout/activity_realizar_solicitud.xml
+++ b/app/src/main/res/layout/activity_realizar_solicitud.xml
@@ -15,12 +15,11 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:weightSum="1"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp">
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:text="@string/motivo_solicitud"
@@ -28,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@android:color/background_dark"
+            android:textColor="@color/colorListViewSelected"
             android:textStyle="normal|bold" />
 
         <ListView
@@ -36,7 +35,9 @@
             android:layout_height="125dp"
             android:layout_marginTop="10dp"
             android:background="@android:color/background_light"
-            android:id="@+id/lv_realizar_solicitud" />
+            android:choiceMode="singleChoice"
+            android:id="@+id/lv_realizar_solicitud"
+            android:listSelector="@color/colorListViewSelected" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -45,20 +46,22 @@
             android:layout_marginTop="30dp">
 
             <TextView
-                android:text="@string/seleccione_prioridad"
-                android:layout_width="match_parent"
+                android:text="@string/prioridad_asignada"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_prioridad_realizar_solicitud"
-                android:layout_weight="1"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 android:textColor="?android:attr/textColorPrimary"
                 android:textSize="15sp"
                 android:textStyle="normal|bold" />
 
-            <Spinner
-                android:layout_width="154dp"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/cb_solicitud_prioridad" />
+                android:id="@+id/tv_prioridad_seleccionada"
+                android:layout_weight="1"
+                android:layout_marginStart="10dp"
+                android:textColor="?android:attr/textColorPrimary" />
 
         </LinearLayout>
 
