--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#3f51b5</color>
     <color name="colorBackground">#f5f5f5</color>
     <color name="colorButton">#6a79cc</color>
+    <color name="colorListViewSelected">#8c9bf0</color>
 </resources>
