Se ha finalizado el servicio para mostrar avisos de un paciente. Se ha añadido la activity para mostrar la información del hospital.

--- a/app/src/main/res/layout/activity_realizar_solicitud.xml
+++ b/app/src/main/res/layout/activity_realizar_solicitud.xml
@@ -80,6 +80,7 @@
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:ems="10"
+            android:focusable="false"
             android:id="@+id/et_descripcion_solicitud"
             android:textSize="15sp" />
 
