--- a/app/src/main/res/layout/activity_configurar_avisos.xml
+++ b/app/src/main/res/layout/activity_configurar_avisos.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.GUI.personal.ConfigurarAvisosActivity">
+    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.gui.personal.ConfigurarAvisosActivity">
 
     <LinearLayout
         android:orientation="vertical"
