--- a/app/src/main/res/layout/cardview_listar_solicitudes.xml
+++ b/app/src/main/res/layout/cardview_listar_solicitudes.xml
@@ -32,7 +32,6 @@
                     android:textStyle="normal|bold" />
 
                 <TextView
-                    android:text="Emergencia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_listar_solicitudes_prioridad"
@@ -41,7 +40,6 @@
                     android:layout_marginStart="3dp" />
 
                 <TextView
-                    android:text="12/02/2016 21:30"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_listar_solicitudes_fecha"
@@ -69,7 +67,50 @@
                     android:id="@+id/tv_listar_solicitudes_estado"
                     android:layout_weight="1"
                     android:textColor="?android:attr/textColorPrimary"
-                    android:text="En progreso"
+                    android:layout_marginStart="3dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp">
+
+                <TextView
+                    android:text="@string/paciente_"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="normal|bold"
+                    android:textColor="?android:attr/textColorPrimary" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_listar_solicitudes_paciente"
+                    android:layout_weight="1"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:layout_marginStart="3dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp">
+
+                <TextView
+                    android:text="@string/habitacion_"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="normal|bold"
+                    android:textColor="?android:attr/textColorPrimary" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_listar_solicitudes_habitacion"
+                    android:layout_weight="1"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:layout_marginStart="3dp" />
             </LinearLayout>
 
@@ -87,7 +128,6 @@
                     android:textColor="?android:attr/textColorPrimary" />
 
                 <TextView
-                    android:text="Revisión de la cama que se ha Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquaroto"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_listar_solicitudes_solicitud"
@@ -97,7 +137,6 @@
             </LinearLayout>
 
             <TextView
-                android:text="Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_listar_solicitudes_descripcion"
