--- a/app/src/main/res/layout/cardview_mapa_hospitalario.xml
+++ b/app/src/main/res/layout/cardview_mapa_hospitalario.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -23,7 +22,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_height="wrap_content"
-                android:layout_width="280dp">
+                android:layout_width="wrap_content">
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -39,7 +38,6 @@
                         android:textColor="?android:attr/textColorPrimary" />
 
                     <TextView
-                        android:text="211"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/tv_mapa_habitacion"
@@ -62,7 +60,6 @@
                         android:textStyle="normal|bold" />
 
                     <TextView
-                        android:text="Paco García Fernández"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/tv_mapa_paciente"
@@ -85,7 +82,6 @@
                         android:textStyle="normal|bold" />
 
                     <TextView
-                        android:text="Hombre"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/tv_mapa_sexo"
@@ -108,7 +104,6 @@
                         android:textStyle="normal|bold" />
 
                     <TextView
-                        android:text="Neumonía"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/tv_mapa_motivo_ingreso"
@@ -118,13 +113,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-            <ImageView
-                android:layout_width="256dp"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:id="@+id/iv_mapa_imagen"
-                android:layout_weight="1"
-                android:layout_height="match_parent" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
